refactor: InputParser 리팩터링 완료
1. 매직 넘버, 매직 스트링 상수화
2. 메서드 이름 더 명확하게 변경
3. parseCarNames의 stream 부분 자바 16 이후로 사용 가능한 toList() 활용